--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,7 @@ dist
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
-# vuepress build output
+# vuepress build outputs
 .vuepress/dist
 
 # Serverless directories
@@ -102,3 +102,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+src/out
